--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- UUID -->
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
+		<dependency>
+			<groupId>com.fasterxml.uuid</groupId>
+			<artifactId>java-uuid-generator</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
