--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ spring:
     username: cock
     password: cockMaster
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+
   liquibase:
     enabled: false
 springdoc:
