--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,8 @@
 spring:
   application:
     name: Parkle Project Jun 2025
-
-  datasource:
-    url: jdbc:postgresql://localhost:5432/start_page_test_db
-    username: cock
-    password: cockMaster
+  # profiles:
+    # active: @activatedProperties@
 
   jpa:
     hibernate:
