--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   spring:
     image: parkle
     container_name: parkle_app
@@ -23,3 +24,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
