--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Spring Starter AOP -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 		<!-- UUID -->
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator -->
 		<dependency>
