--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
 
   spring:
     image: parkle
-    container_name: parkle_app
+    container_name: app
     ports:
       - "8080:8080"
     environment:
