--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,10 +4,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 
   liquibase:
-    enabled: false
+    change-log: classpath:db/changelog/db.changelog-master.xml
+
 springdoc:
   api-docs:
     path: /api-docs
