feat: add bcrypt method and values in application files (+ .env)

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/start_page_test_db
     username: cock
     password: cockMaster
+
+  security:
+    bcrypt:
+      strength: 10
