--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:postgresql://postgres:5432/${POSTGRES_DB}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
+
+  security:
+    bcrypt:
+      strength: ${SPRING_SECURITY_BCRYPT_STRENGTH}
