--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
       - "8080:8080"
     environment:
       SPRING_PROFILES_ACTIVE: docker
+      SPRING_SECURITY_BCRYPT_STRENGTH: ${SPRING_SECURITY_BCRYPT_STRENGTH}
       POSTGRES_HOST: postgres
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER}
