--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
   spring:
     build: .
     image: parkle
-    container_name: app
+    container_name: app_parkle
     ports:
       - "8080:8080"
     environment:
@@ -24,8 +24,8 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
