config & fix: fix configuration of nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@
 
 events {
     # How much connections on proccess.
-    worker_connections: 10;
+    # worker_connections: 10;
 }
 
 # Main block for WEB connections.
@@ -18,9 +18,9 @@ http {
     # server_tokens off;
 
     server {
-        listen: 80;
+        listen 80;
         # server_name parkle-der2shka.ru;
-        server_name localhost;
+        server_name localhost parkle-der2shka.ru;
 
         location / {
             proxy_pass http://app_parkle:8080;
