--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,10 @@
 services:
-
   spring:
     build: .
-    image: parkle
+    # image: parkle
     container_name: app_parkle
-    ports:
-      - "8080:8080"
+    expose:
+      - "8080"
     environment:
       SPRING_PROFILES_ACTIVE: docker
       SPRING_SECURITY_BCRYPT_STRENGTH: ${SPRING_SECURITY_BCRYPT_STRENGTH}
@@ -28,6 +27,17 @@ services:
       - "5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+  
+  nginx:
+    image: nginx:latest
+    container_name: nginx_parkle
+    ports:
+    - "80:80"
+    volumes:
+    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+    - spring
 
 volumes:
   postgres_data:
+  nginx_data:
