config: little changes in nginx.conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@
 
 events {
     # How much connections on proccess.
-    # worker_connections: 10;
+    # worker_connections 10;
 }
 
 # Main block for WEB connections.
@@ -23,6 +23,7 @@ http {
         server_name localhost parkle-der2shka.ru;
 
         location / {
+            # Передаёт запрос, обращаясь к backend контейнеру через его имя.
             proxy_pass http://app_parkle:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
