--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,3 +16,6 @@ management:
   endpoint:
     health:
       show-details: always
+jwt:
+  secret-key: a_very_long_and_complex_secret_key_that_is_at_least_256_bits_long_and_base64_encoded_or_just_a_long_random_string_like_this_example_but_longer_and_random
+  expiration: 86400000
