--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -18,4 +18,4 @@ management:
       show-details: always
 jwt:
   secret-key: RjZkNHd5N3pAJ0MoRitKQE5jUmZValhuMnI1dTh4L0E
-  expiration: 86400000
+  expiration: 20000
