docker: replace nginx:latest image to nginx:mainline-alpine3.23

--- a/compose.yaml
+++ b/compose.yaml
@@ -39,7 +39,7 @@ services:
 
   
   nginx:
-    image: nginx:latest
+    image: nginx:mainline-alpine3.23
     container_name: nginx_parkle
     ports:
     - "80:80"
