nginx: hide nginx version on error screens

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,7 +15,7 @@ http {
     # keepalive_timeout 65;
 
     # Скрывает версию NGINX от злоумышленников.
-    # server_tokens off;
+    server_tokens off;
 
     server {
         listen 80;
