--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,6 +22,10 @@ http {
         # server_name parkle-der2shka.ru;
         server_name localhost parkle-der2shka.ru;
 
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot
+        }
+
         location / {
             # Передаёт запрос, обращаясь к backend контейнеру через его имя.
             proxy_pass http://app_parkle:8080;
@@ -30,16 +34,5 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        #location /swagger-ui/index.html {
-        #    deny all;
-        #}
-
-        #location ~ /\. {
-        #    deny all;
-        #}
     }
-
-    #include /etc/nginx/conf.d/*.conf;
-    #include /etc/nginx/sites-enabled/*;
 }
