--- a/compose.yaml
+++ b/compose.yaml
@@ -42,11 +42,14 @@ services:
     image: nginx:mainline-alpine3.23
     container_name: nginx_parkle
     ports:
-    - "80:80"
+      - "80:80"
+      - "443:443"
     volumes:
-    - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # for nginx configuration
+      - ./nginx/certbot/www:/var/www/certbot   # for ACME challenge
+      - ./nginx/certbot/conf:/etc/letsencrypt  # for certificates
     depends_on:
-    - spring
+      - spring
 
 volumes:
   postgres_data:
