nginx & fix: add ';' for root path

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,7 +23,7 @@ http {
         server_name localhost parkle-der2shka.ru;
 
         location /.well-known/acme-challenge/ {
-            root /var/www/certbot
+            root /var/www/certbot;
         }
 
         location / {
