nginx: split localhost and prod servers

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,9 +18,14 @@ http {
     server_tokens off;
 
     server {
-        listen 80;
-        # server_name parkle-der2shka.ru;
-        server_name localhost parkle-der2shka.ru;
+        listen 443 ssl http2;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/ssl/localhost.crt;
+        ssl_certificate_key /etc/nginx/ssl/localhost.key
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers off;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -35,4 +40,28 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
+
+    server {
+            listen 80;
+            server_name parkle-der2shka.ru;
+
+;             ssl_certificate /etc/nginx/ssl/localhost.crt;
+;             ssl_certificate_key /etc/nginx/ssl/localhost.key
+;
+;             ssl_protocols TLSv1.2 TLSv1.3;
+;             ssl_prefer_server_ciphers off;
+;
+;             location /.well-known/acme-challenge/ {
+;                 root /var/www/certbot;
+;             }
+
+            location / {
+                # Передаёт запрос, обращаясь к backend контейнеру через его имя.
+                proxy_pass http://app_parkle:8080;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+        }
 }
