--- a/compose.yaml
+++ b/compose.yaml
@@ -48,6 +48,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # for nginx configuration
       - ./nginx/certbot/www:/var/www/certbot   # for ACME challenge
       - ./nginx/certbot/conf:/etc/letsencrypt  # for certificates
+      - ./nginx/ssl:/etc/nginx/ssl:ro   # copy ssl certificates
     depends_on:
       - spring
 
