--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,7 @@ http {
         server_name localhost;
 
         ssl_certificate /etc/nginx/ssl/localhost.crt;
-        ssl_certificate_key /etc/nginx/ssl/localhost.key
+        ssl_certificate_key /etc/nginx/ssl/localhost.key;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers off;
@@ -45,15 +45,15 @@ http {
             listen 80;
             server_name parkle-der2shka.ru;
 
-;             ssl_certificate /etc/nginx/ssl/localhost.crt;
-;             ssl_certificate_key /etc/nginx/ssl/localhost.key
-;
-;             ssl_protocols TLSv1.2 TLSv1.3;
-;             ssl_prefer_server_ciphers off;
-;
-;             location /.well-known/acme-challenge/ {
-;                 root /var/www/certbot;
-;             }
+            # ssl_certificate /etc/nginx/ssl/localhost.crt;
+            # ssl_certificate_key /etc/nginx/ssl/localhost.key
+
+            # ssl_protocols TLSv1.2 TLSv1.3;
+            # ssl_prefer_server_ciphers off;
+
+            # location /.well-known/acme-challenge/ {
+            #     root /var/www/certbot;
+            # }
 
             location / {
                 # Передаёт запрос, обращаясь к backend контейнеру через его имя.
