--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -42,26 +42,42 @@ http {
     }
 
     server {
-            listen 80;
-            server_name parkle-der2shka.ru;
+        listen 80;
+        listen [::]:80;
+        server_name parkle-der2shka.ru;
+        # Redirect all HTTP requests to HTTPS.
+        return 301 https://$host$request_uri;
+    }
 
-            # ssl_certificate /etc/nginx/ssl/localhost.crt;
-            # ssl_certificate_key /etc/nginx/ssl/localhost.key
+    server {
+        listen 443 ssl;
+        listen [::]:443 ssl;
+        server_name parkle-der2shka.ru;
 
-            # ssl_protocols TLSv1.2 TLSv1.3;
-            # ssl_prefer_server_ciphers off;
+        # Path to SSL certificates.
+        ssl_certificate /etc/letsencrypt/live/parkle-der2shka.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/parkle-der2shka.ru/privkey.pem;
 
-            # location /.well-known/acme-challenge/ {
-            #     root /var/www/certbot;
-            # }
+        # Configure SSL settings according to your needs.
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
 
-            location / {
-                # Передаёт запрос, обращаясь к backend контейнеру через его имя.
-                proxy_pass http://app_parkle:8080;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
-            }
+        # Configure additional security options according to yout needs.
+        # ssl_session_cache shared:SSL:10m;
+        # ssl_session_timeout 10m;
+
+        # location /.well-known/acme-challenge/ {
+        #     root /var/www/certbot;
+        # }
+
+        location / {
+            # Передаёт запрос, обращаясь к backend контейнеру через его имя.
+            proxy_pass http://app_parkle:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
+    }
 }
