--- a/compose.yaml
+++ b/compose.yaml
@@ -41,6 +41,7 @@ services:
   nginx:
     image: nginx:mainline-alpine3.23
     container_name: nginx_parkle
+    restart: unless-stopped
     ports:
       - "80:80"
       - "443:443"
@@ -49,6 +50,8 @@ services:
       - ./nginx/certbot/www:/var/www/certbot   # for ACME challenge
       - ./nginx/certbot/conf:/etc/letsencrypt  # for certificates
       - ./nginx/ssl:/etc/nginx/ssl:ro   # copy ssl certificates
+      # - /etc/letsencrypt/live/parkle-der2shka.ru/fullchain.pem:/etc/nginx/certs/fullchain.pem:ro
+      # - /etc/letsencrypt/live/parkle-der2shka.ru/privkey.pem:/etc/nginx/certs/privkey.pem:ro
     depends_on:
       - spring
 
