--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,18 +18,8 @@ http {
     server_tokens off;
 
     server {
-        listen 443 ssl http2;
+        listen 80;
         server_name localhost;
-
-        ssl_certificate /etc/nginx/ssl/localhost.crt;
-        ssl_certificate_key /etc/nginx/ssl/localhost.key;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_prefer_server_ciphers off;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
 
         location / {
             # Передаёт запрос, обращаясь к backend контейнеру через его имя.
