--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -19,20 +19,6 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
-
-        location / {
-            # Передаёт запрос, обращаясь к backend контейнеру через его имя.
-            proxy_pass http://app_parkle:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-    }
-
-    server {
-        listen 80;
         listen [::]:80;
         server_name parkle-der2shka.ru;
         # Redirect all HTTP requests to HTTPS.
@@ -57,13 +43,9 @@ http {
         # ssl_session_cache shared:SSL:10m;
         # ssl_session_timeout 10m;
 
-        # location /.well-known/acme-challenge/ {
-        #     root /var/www/certbot;
-        # }
-
         location / {
             # Передаёт запрос, обращаясь к backend контейнеру через его имя.
-            proxy_pass http://app_parkle:8080;
+            proxy_pass http://spring_parkle:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
