--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   spring:
     build: .
     # image: parkle
-    container_name: app_parkle
+    container_name: spring_parkle
     expose:
       - "8080"
     environment:
@@ -46,11 +46,8 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro # for nginx configuration
-      # - ./nginx/certbot/www:/var/www/certbot   # for ACME challenge
-      # - ./nginx/certbot/conf:/etc/letsencrypt  # for certificates
-      # - ./nginx/ssl:/etc/nginx/ssl:ro   # copy ssl certificates
-      - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./nginx/nginx-dev.conf:/etc/nginx/nginx.conf:ro # for nginx configuration
+      # - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - spring
 
