--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -4,6 +4,10 @@ spring:
     username: cock
     password: cockMaster
 
+  redis:
+    host: localhost
+    port: 6379
+
   security:
     bcrypt:
       strength: 10
