--- a/src/main/resources/application-docker.yaml
+++ b/src/main/resources/application-docker.yaml
@@ -4,6 +4,10 @@ spring:
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
 
+  redis:
+    host: redis_parkle
+    port: ${REDIS_PORT}
+
   security:
     bcrypt:
       strength: ${SPRING_SECURITY_BCRYPT_STRENGTH}
