--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   postgres:
     image: postgres:16.9
@@ -50,6 +52,17 @@ services:
       # - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - spring
+
+  redis:
+    image: redis:8.4.0-bookworm
+    container_name: redis_parkle
+    expose:
+      - ${REDIS_PORT}:6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 volumes:
   postgres_data:
