--- a/compose.yaml
+++ b/compose.yaml
@@ -54,7 +54,7 @@ services:
       - spring
 
   redis:
-    image: redis:8.4.0-bookworm
+    image: redis:alpine3.22
     container_name: redis_parkle
     expose:
       - ${REDIS_PORT}:6379
