--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,12 @@ spring:
   application:
     name: Parkle Project Jun 2025
 
+  data:
+    redis:
+      client-type: lettuce
+    lettuce:
+      shutdown-timeout: 2000ms
+
   jpa:
     hibernate:
       ddl-auto: validate
