--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,10 @@ services:
     build: .
     # image: parkle
     container_name: spring_parkle
+    deploy:
+      resources:
+        limits:
+          memory: 360m
     expose:
       - "8080"
     environment:
