nginx: add parkle_scraper into nginx DEV and PROD configuration files

--- a/nginx/nginx-prod.conf
+++ b/nginx/nginx-prod.conf
@@ -43,6 +43,14 @@ http {
         # ssl_session_cache shared:SSL:10m;
         # ssl_session_timeout 10m;
 
+        location /api/websites/fetch/data {
+            proxy_pass http://parkle_scraper_go:9001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location / {
             # Передаёт запрос, обращаясь к backend контейнеру через его имя.
             proxy_pass http://spring_parkle:8080;
