--- a/nginx/nginx-dev.conf
+++ b/nginx/nginx-dev.conf
@@ -21,6 +21,14 @@ http {
         listen 80;
         server_name localhost;
 
+        location /api/websites/fetch/data {
+            proxy_pass http://parkle_scraper_go:9001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location / {
             # Передаёт запрос, обращаясь к backend контейнеру через его имя.
             proxy_pass http://spring_parkle:8080;
